--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<modules>
 		<module>freedom-study-solrj</module>
 		<module>freedom-study-spring</module>
+		<module>freedom-study-jquery</module>
 	</modules>
 
 	<properties>
@@ -27,6 +28,9 @@
 
 		<!-- 阿里巴巴的json工具 -->
 		<fastjson-version>1.2.21</fastjson-version>
+		
+		<!-- Spring的版本 -->
+		<spring.version>5.0.5.RELEASE</spring.version>
 	</properties>
 
 	<dependencyManagement>
@@ -74,6 +78,53 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson-version}</version>
+			</dependency>
+
+			<!-- Spring依赖 -->
+			<!-- 1.Spring核心依赖 -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<!-- 2.Spring dao依赖 -->
+			<!-- spring-jdbc包括了一些如jdbcTemplate的工具类 -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<!-- 3.Spring web依赖 -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<!-- 4.Spring test依赖：方便做单元测试和集成测试 -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -131,7 +182,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
+
 		<plugins>
 			<!-- 编译插件 -->
 			<plugin>
