新增freedom-study-spring-view-resolver子模块

--- a/freedom-study-spring/pom.xml
+++ b/freedom-study-spring/pom.xml
@@ -16,6 +16,7 @@
 	<modules>
 		<module>freedom-study-spring-javaconfig</module>
 		<module>freedom-study-spring-message-converter</module>
+		<module>freedom-study-spring-view-resolver</module>
 	</modules>
 
 	<dependencies>
