新增freedom-study-activiti子模块

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<module>freedom-study-solrj</module>
 		<module>freedom-study-spring</module>
 		<module>freedom-study-jquery</module>
+		<module>freedom-study-activiti</module>
 	</modules>
 
 	<properties>
