新增freedom-study-algorithm子模块

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>freedom-study-spring</module>
 		<module>freedom-study-jquery</module>
 		<module>freedom-study-activiti</module>
+		<module>freedom-study-algorithm</module>
 	</modules>
 
 	<properties>
