新增freedom-study-design-pattern子模块

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>freedom-study-jquery</module>
 		<module>freedom-study-activiti</module>
 		<module>freedom-study-algorithm</module>
+		<module>freedom-study-design-pattern</module>
 	</modules>
 
 	<properties>
